zeit.content.article changes
============================

3.1.3 (unreleased)
------------------

- Nothing changed yet.


3.1.2 (2014-02-10)
------------------

- Use Fanstatic instead of zc.resourcelibrary (VIV-296).


3.1.1 (2014-01-20)
------------------

- Display "Deeplink URL" field (VIV-270).

- Implement EditableBody.values() so that it works without UUID attributes,
  this alleviates concurrency problems noted in zeit.frontend (FRIED-23).


3.1.0 (2014-01-07)
------------------

- Configure layouts for image and video blocks via external XML file (VIV-249,
  VIV-250).

- Implement block with title and (restricted) HTML contents (VIV-245).

- Add IZONArticle marker interface so we can show some settings only for
  non-ZMO articles (VIV-252).

- Fix bug from 3.0.12: Have ``title`` and ``alt`` attributes survive checkin
  (VIV-157).


3.0.12 (2013-11-15)
-------------------

- Allow setting ``title`` and ``alt`` attribute on image blocks (VIV-157).


3.0.11 (2013-10-02)
-------------------

- Make use of webdriver (#12573).

- Update to lxml-3.x (#11611).

- Fix bug with losing whitespace by properly configuring the lxml.objectify
  parser (#12016).


3.0.10 (2013-10-01)
-------------------

- Fix styling of rel="nofollow" checkbox on Mac (VIV-104).


3.0.9 (2013-09-24)
------------------

- Support rel="nofollow" for links in the article body (VIV-104).

- Display ``breadcrumb_title`` field (VIV-105).

- Handle inserting links across tags (#12558).

- Display proper name for "last published by" status.

- Add genre to XML references (WEB-35)

- Remove unittest2, we have 2.7 now


3.0.8 (2013-08-27)
------------------

- Add "genre" field for articles (#12725).

- Display "Mobile URL" field (#12749).

- Display overlay with edit button for images in repository mode, too (#12707).


3.0.7 (2013-08-14)
------------------

- Update to Python-2.7 and ZTK-1.1.5 (#11005).


3.0.6 (2013-07-11)
------------------

- Make keywords optional for the time being.

